--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
           <img src="images/Logo.png" alt="WebSite Logo">
         </div>
         <div class="social_icons">
-          <div class="social_icon"><i class="fab fa-github"></i></div>
-          <div class="social_icon"><i class="fab fa-facebook"></i></div>
-          <div class="social_icon"><i class="fab fa-linkedin"></i></div>
-          <div class="social_icon"><i class="fab fa-instagram"></i></div>
+          <a target="__blank" href="https://github.com/souraavsen1/" class="social_icon"><i class="fab fa-github"></i></a>
+          <a target="__blank" href="https://www.facebook.com/souraavsen/" class="social_icon"><i class="fab fa-facebook"></i></a>
+          <a target="__blank" href="https://www.linkedin.com/in/souravsen-gupta-8747ab20b/" class="social_icon"><i class="fab fa-linkedin"></i></a>
+          <a target="__blank" href="https://www.instagram.com/souraavsen/" class="social_icon"><i class="fab fa-instagram"></i></a>
         </div>
         <div>
           <h4 >Copyright © 2022 Football</h4>
