--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <!-- For Setting icon -->
     <link rel="icon shortcut" href="images/web_logo.png">
     <!-- Font Awesome Kit's Code   -->
@@ -37,130 +36,133 @@
 
     <!-- Main Content -->
     <main>
-      <section class="articles">
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-2.png" alt="Lionel Messi" />
-            <h2>Lionel Messi</h2>
-            <p>
-              Lionel Andrés Messi is an Argentine professional footballer who
-              plays as a forward or an attacking
-              midfielder.
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-1.png" alt="Neymar Jr" />
-            <h2>Neymar Jr</h2>
-            <p>
-              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
-              professional footballer who plays as a forward.
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-3.png" alt="Cristiano Ronaldo" />
-            <h2>Cristiano Ronaldo</h2>
-            <p>
-              Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
-              professional footballer who plays as a forward.
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-4.png" alt="Paulo Dybala" />
-            <h2>Paulo Dybala</h2>
-            <p>
-              Paulo Exequiel Dybala is an Argentine professional footballer who
-              plays as a forward for Serie A club.
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-5.png" alt="Mesut Ozil" />
-            <h2>Mesut Ozil</h2>
-            <p>
-              Mesut Özil is a German professional footballer who plays as an
-              attacking midfielder for Süper Lig club.
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-6.png" alt="Mauro Icardi" />
-            <h2>Mauro Icardi</h2>
-            <p>
-              Mauro Emanuel Icardi is an Argentine professional footballer who
-              plays as a striker for Ligue 1 club Paris
-              team.
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-7.png" alt="Di Maria" />
-            <h2>Di Maria</h2>
-            <p>
-              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
-              professional footballer who plays as a forward.
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-8.png" alt="Kylian Mbappé" />
-            <h2>Kylian Mbappé</h2>
-            <p>
-              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
-              professional footballer who plays as a forward .
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-9.png" alt="Mohamed Salah" />
-            <h2>Mohamed Salah</h2>
-            <p>
-              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
-              professional footballer who plays as a forward .
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-10.png" alt="Harry Kane" />
-            <h2>Harry Kane</h2>
-            <p>
-              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
-              professional footballer who plays as a forward .
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-11.png" alt="Kevin De Bruyne" />
-            <h2>Kevin De Bruyne</h2>
-            <p>
-              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
-              professional footballer who plays as a forward .
-            </p>
-          </div>
-        </article>
-        <article>
-          <div class="player_info">
-            <img src="images/players/player-12.png" alt="Philippe Coutinho" />
-            <h2>Philippe Coutinho</h2>
-            <p>
-              Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
-              professional footballer who plays as a forward.
-            </p>
-          </div>
-        </article>
-      </section>
+      <div class="main_article">
+        <section class="articles">
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-2.png" alt="Lionel Messi" />
+              <h2>Lionel Messi</h2>
+              <p>
+                Lionel Andrés Messi is an Argentine professional footballer who
+                plays as a forward or an attacking
+                midfielder.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-1.png" alt="Neymar Jr" />
+              <h2>Neymar Jr</h2>
+              <p>
+                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                professional footballer who plays as a forward.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-3.png" alt="Cristiano Ronaldo" />
+              <h2>Cristiano Ronaldo</h2>
+              <p>
+                Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
+                professional footballer who plays as a forward.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-4.png" alt="Paulo Dybala" />
+              <h2>Paulo Dybala</h2>
+              <p>
+                Paulo Exequiel Dybala is an Argentine professional footballer
+                who
+                plays as a forward for Serie A club.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-5.png" alt="Mesut Ozil" />
+              <h2>Mesut Ozil</h2>
+              <p>
+                Mesut Özil is a German professional footballer who plays as an
+                attacking midfielder for Süper Lig club.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-6.png" alt="Mauro Icardi" />
+              <h2>Mauro Icardi</h2>
+              <p>
+                Mauro Emanuel Icardi is an Argentine professional footballer who
+                plays as a striker for Ligue 1 club Paris
+                team.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-7.png" alt="Di Maria" />
+              <h2>Di Maria</h2>
+              <p>
+                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                professional footballer who plays as a forward.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-8.png" alt="Kylian Mbappé" />
+              <h2>Kylian Mbappé</h2>
+              <p>
+                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                professional footballer who plays as a forward .
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-9.png" alt="Mohamed Salah" />
+              <h2>Mohamed Salah</h2>
+              <p>
+                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                professional footballer who plays as a forward .
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-10.png" alt="Harry Kane" />
+              <h2>Harry Kane</h2>
+              <p>
+                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                professional footballer who plays as a forward .
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-11.png" alt="Kevin De Bruyne" />
+              <h2>Kevin De Bruyne</h2>
+              <p>
+                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                professional footballer who plays as a forward .
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="player_info">
+              <img src="images/players/player-12.png" alt="Philippe Coutinho" />
+              <h2>Philippe Coutinho</h2>
+              <p>
+                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                professional footballer who plays as a forward.
+              </p>
+            </div>
+          </article>
+        </section>
+      </div>
       <hr>
       <section class="top_players">
         <h2>Top Players <br><span>of <strong>Copa America 2021</strong></span></h2>
@@ -267,13 +269,18 @@
           <img src="images/Logo.png" alt="WebSite Logo">
         </div>
         <div class="social_icons">
-          <a target="__blank" href="https://github.com/souraavsen1/" class="social_icon"><i class="fab fa-github"></i></a>
-          <a target="__blank" href="https://www.facebook.com/souraavsen/" class="social_icon"><i class="fab fa-facebook"></i></a>
-          <a target="__blank" href="https://www.linkedin.com/in/souravsen-gupta-8747ab20b/" class="social_icon"><i class="fab fa-linkedin"></i></a>
-          <a target="__blank" href="https://www.instagram.com/souraavsen/" class="social_icon"><i class="fab fa-instagram"></i></a>
+          <a target="__blank" href="https://github.com/souraavsen1/"
+            class="social_icon"><i class="fab fa-github"></i></a>
+          <a target="__blank" href="https://www.facebook.com/souraavsen/"
+            class="social_icon"><i class="fab fa-facebook"></i></a>
+          <a target="__blank"
+            href="https://www.linkedin.com/in/souravsen-gupta-8747ab20b/"
+            class="social_icon"><i class="fab fa-linkedin"></i></a>
+          <a target="__blank" href="https://www.instagram.com/souraavsen/"
+            class="social_icon"><i class="fab fa-instagram"></i></a>
         </div>
         <div>
-          <h4 >Copyright © 2022 Football</h4>
+          <h4>Copyright © 2022 Football</h4>
         </div>
       </section>
     </footer>
