--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
 
     <!-- Footer Section -->
     <footer>
-      <section class="footer flex-column">
-        <div>
+      <section class="footer">
+        <div class="footerimage">
           <img src="images/Logo.png" alt="WebSite Logo">
         </div>
         <div class="social_icons">
