--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </tr>
 
           <tr>
-            <td><div class="palyer">
+            <td><div class="player_status">
                 <img class="player" src="images/players/player-2.png">
                 <h4>Lionel Messi</h4>
                 <img class="flag" src="images/flag/argentina.webp" alt="agr">
@@ -188,7 +188,7 @@
                 target="__blank" class="button">Details</a></td>
           </tr>
           <tr>
-            <td><div class="palyer">
+            <td><div class="player_status">
                 <img class="player" src="images/players/player-1.png">
                 <h4>Lionel Messi</h4>
                 <img class="flag" src="images/flag/brazil.jpg" alt="agr">
@@ -201,7 +201,7 @@
                 target="__blank" class="button">Details</a></td>
           </tr>
           <tr>
-            <td><div class="palyer">
+            <td><div class="player_status">
                 <img class="player" src="images/players/player-6.png">
                 <h4>Lautaro Martinez</h4>
                 <img class="flag" src="images/flag/argentina.webp" alt="agr">
@@ -214,7 +214,7 @@
                 target="__blank" class="button">Details</a></td>
           </tr>
           <tr>
-            <td><div class="palyer">
+            <td><div class="player_status">
                 <img class="player" src="images/players/Luis Diaz.webp">
                 <h4>Luis Diaz </h4>
                 <img class="flag" src="images/flag/colombia.jpg" alt="agr">
@@ -227,7 +227,7 @@
                 target="__blank" class="button">Details</a></td>
           </tr>
           <tr>
-            <td><div class="palyer">
+            <td><div class="player_status">
                 <img class="player" src="images/players/player-11.png">
                 <h4>Gianluca Lapadula </h4>
                 <img class="flag" src="images/flag/peru.jpg" alt="agr">
